infra/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proj--api
  namespace: 
  annotations:
    kubernetes.io/ingress.class: 
spec:
  rules:
    - host: -.
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: proj--api
                port:
                  number: 80
